--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <span class="animate" style="--i:4;"></span>
             </p>
             <div class="btn-box">
-                <a href="Swaminathan Resume_20231027_003510_0000.pdf" class="btn">Download CV</a>
+                <a href="Sangaralingam Resume .pdf" class="btn">Download CV</a>
                 <a href="https://wa.me/qr/VHKYIWA34RCMN1" class="btn">Let's Talk</a>
                 <span class="animate" style="--i:5;"></span>
             </div>
